Implement ParticipantData legacy ID analysis